--- a/GE.WebAdmin/Views/Request/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Request/_GridView.cshtml
@@ -22,7 +22,7 @@
             } },
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="RequestType", Caption="Тип запросв"},
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="UrlRef", Caption="UrlRef",Template=(m)=> {
-                return !string.IsNullOrEmpty(m.UrlRef)? string.Format("<a href=\"{0}\" target=\"_blank\" rel=\"nofollow\">{0}</a>", m.UrlRef):null;
+                return !string.IsNullOrEmpty(m.UrlRef)? string.Format("<a href=\"{0}\" target=\"_blank\" rel=\"nofollow\">{1}</a>", m.UrlRef, m.UrlRef.Length>=300?m.UrlRef.Substring(0,200)+"...":m.UrlRef):null;
             }},
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="RawUrl", Caption="Целевой адрес"}
         },
