--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div id="wrapper">
-        
+
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,7 +33,7 @@
                 </button>
                 <a class="navbar-brand" href="/">@SX.WebCore.Resources.Settings.adminPanelName @SX.WebCore.Resources.Settings.adminPanelVersion</a>
             </div>
-           
+
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -83,9 +83,7 @@
                             </a>
                         </li>
                     </ul>
-                    <!-- /.dropdown-messages -->
                 </li>
-                <!-- /.dropdown -->
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -248,7 +246,7 @@
                 </li>
                 <!-- /.dropdown -->
             </ul>
-            
+
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
@@ -293,83 +291,115 @@
                                 </ul>
                             </li>
                         }
-                        <li>
-                            <a href="javascript:void(0)"><i class="fa fa-crop fa-fw"></i> Мультимедиа<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="@Url.Action(MVC.Pictures.Index())"><i class="fa fa-image fa-fw"></i> Фото-контент</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="@Url.Action(MVC.Games.Index())"><i class="fa fa-space-shuttle fa-fw"></i> Игры</a>
-                        </li>
+                        @if (User.IsInRole("photo-redactor"))
+                        {
+                            <li>
+                                <a href="javascript:void(0)"><i class="fa fa-crop fa-fw"></i> Мультимедиа<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+
+                                    <li>
+                                        <a href="@Url.Action(MVC.Pictures.Index())"><i class="fa fa-image fa-fw"></i> Фото-контент</a>
+                                    </li>
+
+                                </ul>
+                            </li>
+                        }
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li>
+                                <a href="@Url.Action(MVC.Games.Index())"><i class="fa fa-space-shuttle fa-fw"></i> Игры</a>
+                            </li>
+                        }
                         <li>
                             <a href="#"><i class="fa fa-archive fa-fw"></i> Материалы<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="#"><i class="fa fa-book"></i> Статьи <span class="fa arrow"></span></a>
                                     <ul class="nav nav-third-level">
-                                        <li>
-                                            <a href="@Url.Action(MVC.Articles.Index())">Каталог статей</a>
-                                        </li>
-                                        <li>
-                                            <a href="@Url.Action(MVC.MaterialCategories.Index(mct: SX.WebCore.Enums.ModelCoreType.Article))">Категории статей</a>
-                                        </li>
+                                        @if (User.IsInRole("author-article"))
+                                        {
+                                            <li>
+                                                <a href="@Url.Action(MVC.Articles.Index())">Каталог статей</a>
+                                            </li>
+                                        }
+                                        @if (User.IsInRole("admin"))
+                                        {
+                                            <li>
+                                                <a href="@Url.Action(MVC.MaterialCategories.Index(mct: SX.WebCore.Enums.ModelCoreType.Article))">Категории статей</a>
+                                            </li>
+                                        }
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="#"><i class="fa fa-newspaper-o"></i> Новости <span class="fa arrow"></span></a>
                                     <ul class="nav nav-third-level">
-                                        <li>
-                                            <a href="@Url.Action(MVC.News.Index())">Каталог новостей</a>
-                                        </li>
-                                        <li>
-                                            <a href="@Url.Action(MVC.MaterialCategories.Index(mct: SX.WebCore.Enums.ModelCoreType.News))">Категории новостей</a>
-                                        </li>
+                                        @if (User.IsInRole("author-news"))
+                                        {
+                                            <li>
+                                                <a href="@Url.Action(MVC.News.Index())">Каталог новостей</a>
+                                            </li>
+                                        }
+                                        @if (User.IsInRole("admin"))
+                                        {
+                                            <li>
+                                                <a href="@Url.Action(MVC.MaterialCategories.Index(mct: SX.WebCore.Enums.ModelCoreType.News))">Категории новостей</a>
+                                            </li>
+                                        }
                                     </ul>
                                 </li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#"><i class="fa fa-forumbee fa-fw"></i> Форум<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="@Url.Action(MVC.ForumParts.Index())"><i class="fa fa-envelope"></i> Разделы</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-cog fa-fw"></i> Seo оптимизация<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="@Url.Action(MVC.SeoInfo.Index())"><i class="fa fa-cogs"></i> Метатеги</a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action(MVC.Redirects.Index())"><i class="fa fa-arrow-right"></i> 301 редирект</a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action(MVC.Settings.EditRobotsFile())"><i class="fa fa-ship"></i> robot.txt</a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action(MVC.SeoWordCounter.Index())"><i class="fa fa-compress"></i> Счетчик слов</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-wrench fa-fw"></i> Настройки<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="@Url.Action(MVC.Settings.EditSite())">Настройки сайта</a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action(MVC.Settings.EditEmptyGame())">Начальная иконка</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="@Url.Action(MVC.Request.Index())"><i class="fa fa-history fa-fw"></i> Статистика запросов</a>
-                        </li>
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li>
+                                <a href="#"><i class="fa fa-forumbee fa-fw"></i> Форум<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <a href="@Url.Action(MVC.ForumParts.Index())"><i class="fa fa-envelope"></i> Разделы</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
+                        @if (User.IsInRole("seo"))
+                        {
+                            <li>
+                                <a href="#"><i class="fa fa-cog fa-fw"></i> Seo оптимизация<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <a href="@Url.Action(MVC.SeoInfo.Index())"><i class="fa fa-cogs"></i> Метатеги</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.Redirects.Index())"><i class="fa fa-arrow-right"></i> 301 редирект</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.Settings.EditRobotsFile())"><i class="fa fa-ship"></i> robot.txt</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.SeoWordCounter.Index())"><i class="fa fa-compress"></i> Счетчик слов</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li>
+                                <a href="#"><i class="fa fa-wrench fa-fw"></i> Настройки<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <a href="@Url.Action(MVC.Settings.EditSite())">Настройки сайта</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.Settings.EditEmptyGame())">Начальная иконка</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
+                        @if (User.IsInRole("seo"))
+                        {
+                            <li>
+                                <a href="@Url.Action(MVC.Request.Index())"><i class="fa fa-history fa-fw"></i> Статистика запросов</a>
+                            </li>
+                        }
                         <li>
                             <a href="#"><i class="fa fa-tasks fa-fw"></i> FAQ<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
