--- a/GE.WebAdmin/Views/Users/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Users/_GridView.cshtml
@@ -21,7 +21,8 @@
         },
         PagerInfo=pagerInfo,
         Filter = filter,
-        SortDirections = sortDirections
+        SortDirections = sortDirections,
+        EnableCreate=false
     },
         new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
