--- a/GE.WebAdmin/Views/Users/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Users/_GridView.cshtml
@@ -18,6 +18,9 @@
                 return string.Format("<a href=\"mailto:{0}\">{0}</a>", m.Email);
             }},
             new SxExtantions.SxGridViewColumn<VMUser>{FieldName="RoleNames", Caption="Роль"},
+            new SxExtantions.SxGridViewColumn<VMUser>{FieldName="IsOnline", Caption="Статус", Template=(u)=> {
+                return u.IsOnline?string.Format("<span class=\"badge\">online</span>"):null;
+            } }
         },
         PagerInfo=pagerInfo,
         Filter = filter,
