https://github.com/EugeneKormin/Game-exe/issues/123

--- a/GE.WebUI/Content/less/last-category-news-block.less
+++ b/GE.WebUI/Content/less/last-category-news-block.less
@@ -169,6 +169,11 @@
     width: 25%;
 }
 
+.l-c-n-b .content .category-wrapper > ul > li:hover .lcnb-news
+{
+    display:unset;
+}
+
 .l-c-n-b .content .category-wrapper > ul > li > a {
     display: block;
     height: 100%;
@@ -187,10 +192,10 @@
     position: absolute;
     top: 0;
     background-color: @color-game-menu;
+    display: none;
 }
 
 .l-c-n-b .lcnb-news > li {
-    
 }
 
 .l-c-n-b .lcnb-news > li > a {
@@ -199,9 +204,9 @@
     font-style: italic;
     line-height: 1;
     display: block;
-    padding:5px;
+    padding: 5px;
 }
 
 .l-c-n-b .lcnb-news > li > a:hover {
-    font-weight:700;
+    font-weight: 700;
 }
