--- a/GE.WebAdmin/Views/SeoKeywords/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SeoKeywords/_GridView.cshtml
@@ -8,7 +8,7 @@
 }
 
 <br />
-<h3>Ключевые слова</h3>
+<h3>Ключевые слова<span class="small"> (Максимально рекомендуемое количество фраз - 20)</span></h3>
 @using (Ajax.BeginForm(MVC.SeoKeywords.Edit(), new AjaxOptions { HttpMethod = "post", UpdateTargetId = "seo-kw" }))
 {
     @Html.AntiForgeryToken()
