--- a/GE.WebUI/Views/News/List.cshtml
+++ b/GE.WebUI/Views/News/List.cshtml
@@ -7,8 +7,9 @@
     {
         ViewBag.Title += " " + ViewBag.GameTitle;
     }
-    ViewBag.H1 = h1 ?? ViewBag.Title;
+    ViewBag.H1 = h1 ?? ViewBag.Tag!=null? "Новости тега "+ (string)ViewBag.Tag : ViewBag.Title;
     ViewBag.H1CssClass = "header";
+    ViewBag.Description = ViewBag.Description ?? ViewBag.Tag != null ? "На данной странице вы сможете найти абсолютно все новости и статьи, которые были написаны авторами нашего сайта по запросу "+ (string)ViewBag.Tag : null;
 }
 
 @Html.Partial(MVC.Shared.Views._Breadcrumbs, (VMBreadcrumb[])ViewBag.Breadcrumbs)
