--- a/GE.WebAdmin/Views/SeoInfo/_GeneralEdit.cshtml
+++ b/GE.WebAdmin/Views/SeoInfo/_GeneralEdit.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-12">
         @Html.LabelFor(x => x.SeoTitle, new { @class = "control-label" })
-        <span class="text-info"> (тег Title)</span>
+        <span class="text-info"> (тег Title. Рекомендуемая длина - 7-15 слов. Менее 7 слов заносить нельзя)</span>
         @Html.EditorFor(x => x.SeoTitle, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите заголовок страницы", @autocomplete = "off" } })
         @Html.ValidationMessageFor(x => x.SeoTitle)
     </div>
@@ -16,7 +16,7 @@
 <div class="row">
     <div class="col-md-12">
         @Html.LabelFor(x => x.SeoDescription, new { @class = "control-label" })
-        <span class="text-info"> (тег Description)</span>
+        <span class="text-info"> (тег Description. Рекомендуемая длина - 150-700 знаков. Заносить можно только в этих границах)</span>
         @Html.EditorFor(x => x.SeoDescription, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите описание страницы", @autocomplete = "off" } })
         @Html.ValidationMessageFor(x => x.SeoDescription)
     </div>
@@ -25,10 +25,9 @@
 <div class="row">
     <div class="col-md-9">
         @Html.LabelFor(x => x.H1, new { @class = "control-label" })
-        <span class="text-info"> (тег h1)</span>
+        <span class="text-info"> (тег h1. Рекомендуемая длина - 2-6 слов. Менее 2 слов заносить нельзя. Тег отображается непосредственно перед началом любого полезного контента страницы.)</span>
         @Html.EditorFor(x => x.H1, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите тег h1", @autocomplete = "off" } })
         @Html.ValidationMessageFor(x => x.H1)
-        <div class="text-info">Тег отображается непосредственно перед началом любого полезного контента страницы.</div>
     </div>
     <div class="col-md-3">
         @Html.LabelFor(x => x.H1CssClass, new { @class = "control-label" })
