--- a/GE.WebUI/Views/Articles/List.cshtml
+++ b/GE.WebUI/Views/Articles/List.cshtml
@@ -7,9 +7,9 @@
     {
         ViewBag.Title += " " + ViewBag.GameTitle;
     }
-    ViewBag.H1 = h1 ?? ViewBag.Tag != null ? "Статьи тега " + (string)ViewBag.Tag : ViewBag.Title;
+    ViewBag.H1 = h1 ?? (ViewBag.Tag != null ? "Статьи тега " + (string)ViewBag.Tag : ViewBag.Title);
     ViewBag.H1CssClass = "header";
-    ViewBag.Description = ViewBag.Description ?? ViewBag.Tag != null ? "На данной странице вы сможете найти абсолютно все новости и статьи, которые были написаны авторами нашего сайта по запросу " + (string)ViewBag.Tag : null;
+    ViewBag.Description = ViewBag.Description ?? (ViewBag.Tag != null ? "На данной странице вы сможете найти абсолютно все новости и статьи, которые были написаны авторами нашего сайта по запросу " + (string)ViewBag.Tag : null);
 }
 
 @Html.Partial(MVC.Shared.Views._Breadcrumbs, (VMBreadcrumb[])ViewBag.Breadcrumbs)
