--- a/GE.WebUI/Content/less/by-date-m.less
+++ b/GE.WebUI/Content/less/by-date-m.less
@@ -11,10 +11,34 @@
 
 .by-date-m > h3{
     margin-bottom:@def-pad;
+    @media (max-width: @screen-xs-max) {
+        margin-bottom:0;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m > .row{
     display:table;
+    @media (max-width: @screen-xs-max) {
+        display:block;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m > .row > div{
@@ -22,6 +46,21 @@
     float:none;
     vertical-align:top;
     height:100%;
+    @media (max-width: @screen-xs-max) {
+        display:unset;
+        float:left;
+        vertical-align:unset;
+        height:auto;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m .content {
@@ -29,16 +68,57 @@
     width:100%;
     display:inline-table;
     padding-bottom:@def-pad*2;
+    @media (max-width: @screen-xs-max) {
+        margin-top:@def-pad*2;
+        padding-bottom:0;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m .content.first{
     padding-left:@def-pad*3;
+    @media (max-width: @screen-xs-max) {
+        padding-left:0;
+        padding-top: @def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m .content.last{
     padding-right:@def-pad*3;
     padding-left:@def-pad*2;
     border-left:1px solid @gray-lighter;
+    @media (max-width: @screen-xs-max) {
+        padding-right:0;
+        padding-left:0;
+        border:none;
+        padding-bottom:@def-pad*3;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m .content .arrow {
@@ -50,6 +130,46 @@
     top: 0;
 }
 
+.by-date-m .content .arrow.hidden-lg{
+    @media (max-width: @screen-xs-max) {
+        left:unset;
+        right:unset;
+        top:0;
+        width:100%;
+        height:@def-pad*3;
+        padding-right:@def-pad*2;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
+.by-date-m .content.last .arrow.hidden-lg{
+    @media (max-width: @screen-xs-max) {
+        left:unset;
+        right:unset;
+        bottom:0;
+        top:unset;
+        width:100%;
+        height:@def-pad*3;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
 .by-date-m .content .arrow > a{
     display:table;
     width:100%;
@@ -58,7 +178,7 @@
     text-decoration:none;
 }
 
-.by-date-m .content .arrow > a:focus{
+.by-date-m .content .arrow > a:focus, .by-date-m .content .arrow > a:hover{
     background-color:rgba(0,0,0,.05);
 }
 
@@ -74,6 +194,18 @@
 
 .by-date-m .content > .title, .by-date-m .content > .fw{
     margin-top:10px;
+    @media (max-width: @screen-xs-max) {
+        margin-top:5px;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m .content > .title > a{
@@ -84,6 +216,19 @@
 .by-date-m .content > .author{
     position:absolute;
     bottom:0;
+    @media (max-width: @screen-xs-max) {
+        position:unset;
+        margin-top:5px;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .by-date-m .content > .author > img{
