--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -14,6 +14,7 @@
     @Html.Partial(MVC.Shared.Views._Foreword, Model)
 
     <div class="m-html">
+        @Html.Action(MVC.News.Popular(mct: Model.ModelCoreType, amount: 4))
         @if (Model.FrontPictureId.HasValue && Model.ShowFrontPictureOnDetailPage)
         {
             <img class="f-picture" alt="@Model.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.FrontPictureId))" />
@@ -22,6 +23,7 @@
         @*@Html.Partial(MVC.Shared.Views._SocNetButtons)*@
         @Html.Partial(MVC.Shared.Views._Share42, Model)
     </div>
+    
 
     @Html.Partial(MVC.Shared.Views._MaterialInfo, Model)
 
