--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -14,7 +14,7 @@
     @Html.Partial(MVC.Shared.Views._Foreword, Model)
 
     <div class="m-html">
-        @Html.Action(MVC.News.Popular(mct: Model.ModelCoreType, amount: 4))
+        @Html.Action(MVC.News.Popular(mct: Model.ModelCoreType, mid: Model.Id, amount: 4))
         @if (Model.FrontPictureId.HasValue && Model.ShowFrontPictureOnDetailPage)
         {
             <img class="f-picture" alt="@Model.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.FrontPictureId))" />
