https://github.com/EugeneKormin/Game-exe/issues/107

--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -27,6 +27,10 @@
     font-size: 16px;
 }
 
+.m-html hr{
+    border-color:#cfcfcf;
+}
+
 .m-html > .f-picture {
     max-width: 100%;
     margin-bottom: @def-pad*2;
