--- a/GE.WebUI/Views/Articles/Details.cshtml
+++ b/GE.WebUI/Views/Articles/Details.cshtml
@@ -37,6 +37,7 @@
     @Html.Partial(MVC.Shared.Views._Foreword, Model)
 
     <div class="m-html">
+        @Html.Action(MVC.Articles.Popular(mct: Model.ModelCoreType, mid: Model.Id, amount: 4))
         @if (Model.FrontPictureId.HasValue && Model.ShowFrontPictureOnDetailPage)
         {
             <img class="f-picture" alt="@Model.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)Model.FrontPictureId))" />
@@ -46,6 +47,10 @@
     </div>
 
     @Html.Partial(MVC.Shared.Views._MaterialInfo, Model)
+
+    <div id="by-date-mat">
+        @Html.Action(MVC.Articles.ByDateMaterial(mct: Model.ModelCoreType, date: Model.DateOfPublication))
+    </div>
 
     @Html.Action(MVC.MaterialTags.List(mid: Model.Id, mct: Model.ModelCoreType, maxFs: 30))
     @Html.Action("likematerials", new { controller = "articles", materialId = Model.Id, modelCoreType = Model.ModelCoreType, amount = 9 })
