https://github.com/EugeneKormin/Game-exe/issues/91

--- a/GE.WebUI/Views/Articles/Details.cshtml
+++ b/GE.WebUI/Views/Articles/Details.cshtml
@@ -33,7 +33,7 @@
 
 <div class="detail-article">
     @Html.Partial(MVC.Shared.Views._Breadcrumbs, (VMBreadcrumb[])ViewBag.Breadcrumbs)
-    
+
     @Html.Partial(MVC.Shared.Views._Foreword, Model)
 
     <div class="m-html">
@@ -72,7 +72,8 @@
 </div>
 
 @section scripts{
-    <script type="text/javascript" src="~/share42/share42.js"></script> 
+    <script type="text/javascript" src="~/share42/share42.js"></script>
     <script type="text/javascript" src="~/Content/dist/js/jquery.validate.min.js"></script>
     <script type="text/javascript" src="~/Content/dist/js/jquery.validate.unobtrusive.min.js"></script>
+    <script type="text/javascript" src="~/Content/dist/js/currency-provider.min.js"></script>
 }
