--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -8,11 +8,24 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Главная</a>
+            <a class="navbar-brand" href="/">@(GE.WebUI.SiteSettings.Get(SX.WebCore.Resources.Settings.siteName))</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Главная <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/">Вернутся на главную</a></li>
+                        <li><a href="#">Выбрать игру</a></li>
+                        <li><a href="@Url.Action(MVC.News.List())">Почитать новости</a></li>
+                        <li><a href="@Url.Action(MVC.Articles.List())">Почитать статьи</a></li>
+                        <li><a href="#">Посмотреть результаты/ самому поучаствовать в конкурсах</a></li>
+                        <li><a href="#">Почитать форум</a></li>
+                    </ul>
+                </li>
+            </ul>
             @Html.Action(MVC.Menues.Menu(1, cssClass: "nav navbar-nav site-menu"))
             @Html.Action(MVC.Menues.Menu(2, "nav navbar-nav navbar-right"))
             @Html.Partial(MVC.Search.Views._Search)
