--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -31,6 +31,12 @@
     border-color:#cfcfcf;
 }
 
+.m-html .currency{
+    font-size:0.9em;
+    color:@color-black;
+    text-decoration:underline;
+}
+
 .m-html > .f-picture {
     max-width: 100%;
     margin-bottom: @def-pad*2;
