--- a/GE.WebAdmin/Views/News/Edit.cshtml
+++ b/GE.WebAdmin/Views/News/Edit.cshtml
@@ -3,7 +3,7 @@
     var isNew = Model.Id == 0;
     ViewBag.Title = isNew ? "Добавить новость" : "Редактировать новость \"" + Model.Title + "\"";
     ViewBag.GameTitle = isNew || !Model.GameId.HasValue ? null : Model.Game.Title;
-    ViewBag.MaterialCategoryTitle = isNew || Model.CategoryId==null ? null : Model.Category.Title;
+    ViewBag.MaterialCategoryTitle = isNew || Model.CategoryId == null ? null : Model.Category.Title;
 }
 <h2>@ViewBag.Title</h2>
 @if (!isNew)
@@ -110,9 +110,11 @@
             <br />
             <div class="row">
                 <div class="col-md-12">
-                    @Html.LabelFor(x => x.Html, new { @class = "control-label" })
+                    <button data-toggle="modal" title="Посмотреть результат" data-target="#matModal" type="button" class="btn btn-default"><i class="fa fa-eye"></i></button>&nbsp;
+                    @Html.LabelFor(x => x.Html, new { @class = "control-label" }) <br /><br />
                     @Html.EditorFor(x => x.Html, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(x => x.Html)
+                    @Html.Partial(MVC.Shared.Views._MaterialModal, Model)
                 </div>
             </div>
             <br />
@@ -159,5 +161,12 @@
             CKEDITOR.remove(CKEDITOR.instances['Html']);
         }
         CKEDITOR.replace('Html', { height: 400 });
+
+        $(function () {
+            $('#matModal').on('show.bs.modal', function (e) {
+                $(this).find('.modal-title').html($('#Title').val());
+                $(this).find('.modal-body').html($('#Html').val());
+            })
+        });
     </script>
 }
