--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -377,6 +377,9 @@
                                     <li>
                                         <a href="@Url.Action(MVC.SeoWordCounter.Index())"><i class="fa fa-compress"></i> Счетчик слов</a>
                                     </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.BannedUrls.Index())"><i class="fa fa-ban"></i> Забаненные адреса</a>
+                                    </li>
                                 </ul>
                             </li>
                         }
